# voice-ai-lab

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  setup.sh
api/: .env.example  alembic.ini  main.py  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 32d27e1e42c0_init.py  a1b2c3d4e5f6_add_description_to_agent_configs.py  b2c3d4e5f6a7_add_title_to_sessions.py  c44df5811896_add_llm_models.py
api/app/agent_configs/: crud.py  handler.py  models.py  router.py
api/app/llm_models/: crud.py  handler.py  models.py  router.py  seeder.py
api/app/llms/: anthropic.py  base.py  factory.py  groq.py  openai.py
api/app/metrics/: crud.py  handler.py  models.py  router.py
api/app/session_turns/: crud.py  models.py
api/app/sessions/: crud.py  handler.py  models.py  router.py
api/app/stt/: base.py  factory.py  sarvam.py  whisper.py
api/app/tts/: elevenlabs.py
api/app/voices/: handler.py  helpers.py  models.py  router.py
api/app/ws/: handler.py  router.py
api/config/: cache.py  db.py  http.py  logger.py
api/core/: deps.py  exceptions.py
api/scripts/: flush_redis.sh
client/: PROJECT_SETUP.md  components.json  next.config.ts  package-lock.json  package.json
client/src/app/: layout.tsx
client/src/components/: AppSidebar.tsx  PlaygroundConfigPanel.tsx  SessionPanel.tsx  SessionTurnsSkeleton.tsx  ThemeToggle.tsx  login-form.tsx  signup-form.tsx
client/src/hooks/: useConfigs.ts  useElevenLabsModels.ts  useLLMModels.ts  useMetrics.ts  useSessionChat.ts  useSessions.ts  useVoicePipeline.ts  useVoices.ts
(+37 files in other folders)
