[project]
name = "backrooms-server"
version = "0.1.0"
description = "Initial FastAPI backend scaffold"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "python-dotenv>=1.0",
    "alembic>=1.14",
    "sarvamai>=0.1.28",
    "groq>=1.2.0",
    "redis>=7.4.0",
    "pydantic>=2.13.4",
    "elevenlabs>=2.49.0",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "anthropic>=0.104.1",
]

[tool.uv]
